Got rid of unnecessary fDT multiplications, added visual effect to dash, and implemented rudimentary arena contraction, though I need to iron out some jankiness, such as orbs breaking through walls during contraction, and turrets not remaining attached to their bounds.

--- a/data/config/FX.ini
+++ b/data/config/FX.ini
@@ -44,9 +44,24 @@ EndValue = (-1920, 0)
 [FX-ScrollRight@FX-ScrollLeft]
 EndValue = (1920, 0)
 
-															;FADE IN
+															;FADE OUT
 
-[FXS-FadeIn]
+[FX-FadeOut]
+SlotList = FXS-FadeOut
+KeepInCache = true
+Loop = false
+
+[FXS-FadeOut]
+Type = alpha
+Curve = smooth
+StartValue = 0
+EndValue = -1
+StartTime = 0
+EndTime = 0.25
+
+															;FADE IN SCENE
+
+[FXS-FadeInScene]
 Type = alpha
 Curve = smooth
 StartValue = 0
@@ -54,9 +69,9 @@ EndValue = 1
 StartTime = 0
 EndTime = 0.4
 
-															;FADE OUT
+															;FADE OUT SCENE
 
-[FXS-FadeOut@FXS-FadeIn]
+[FXS-FadeOutScene@FXS-FadeInScene]
 EndValue = -1
 StartTime = 0.6
 EndTime = 1
