--- a/data/config/Hexpatriates.ini
+++ b/data/config/Hexpatriates.ini
@@ -170,6 +170,7 @@ CalculateSuperInput = % > @, > Get < PlayerType, > Get GenericInput Super, Retur
 	O-MeterBorder = 1.5
 	O-ScenePause = -0.5
 	O-Text = -0.1
+	O-TextUI = 0.1
 	O-TextMenu = -1
 	O-Fade = 0
 
