--- a/data/config/Icon.ini
+++ b/data/config/Icon.ini
@@ -97,6 +97,94 @@ ChildList = O-Ship7IconP1
 Graphic = G-Pilot8
 ChildList = O-Ship8IconP1
 
+[O-Pilot1IconDash@O-PilotIcon]
+Graphic = G-Pilot1
+LifeTime = fx
+FXList = FX-FadeOut
+ChildList = O-Ship1IconDashP1
+
+[O-Pilot2IconDash@O-PilotIcon]
+Graphic = G-Pilot2
+LifeTime = fx
+FXList = FX-FadeOut
+ChildList = O-Ship2IconDashP1
+
+[O-Pilot3IconDash@O-PilotIcon]
+Graphic = G-Pilot3
+LifeTime = fx
+FXList = FX-FadeOut
+ChildList = O-Ship3IconDashP1
+
+[O-Pilot4IconDash@O-PilotIcon]
+Graphic = G-Pilot4
+LifeTime = fx
+FXList = FX-FadeOut
+ChildList = O-Ship4IconDashP1
+
+[O-Pilot5IconDash@O-PilotIcon]
+Graphic = G-Pilot5
+LifeTime = fx
+FXList = FX-FadeOut
+ChildList = O-Ship5IconDashP1
+
+[O-Pilot6IconDash@O-PilotIcon]
+Graphic = G-Pilot6
+LifeTime = fx
+FXList = FX-FadeOut
+ChildList = O-Ship6IconDashP1
+
+[O-Pilot7IconDash@O-PilotIcon]
+Graphic = G-Pilot7
+LifeTime = fx
+FXList = FX-FadeOut
+ChildList = O-Ship7IconDashP1
+
+[O-Pilot8IconDash@O-PilotIcon]
+Graphic = G-Pilot8
+LifeTime = fx
+FXList = FX-FadeOut
+ChildList = O-Ship8IconDashP1
+
+[O-Pilot1IconDashSolo@O-PilotIcon]
+Graphic = G-Pilot1
+LifeTime = fx
+FXList = FX-FadeOut
+
+[O-Pilot2IconDashSolo@O-PilotIcon]
+Graphic = G-Pilot2
+LifeTime = fx
+FXList = FX-FadeOut
+
+[O-Pilot3IconDashSolo@O-PilotIcon]
+Graphic = G-Pilot3
+LifeTime = fx
+FXList = FX-FadeOut
+
+[O-Pilot4IconDashSolo@O-PilotIcon]
+Graphic = G-Pilot4
+LifeTime = fx
+FXList = FX-FadeOut
+
+[O-Pilot5IconDashSolo@O-PilotIcon]
+Graphic = G-Pilot5
+LifeTime = fx
+FXList = FX-FadeOut
+
+[O-Pilot6IconDashSolo@O-PilotIcon]
+Graphic = G-Pilot6
+LifeTime = fx
+FXList = FX-FadeOut
+
+[O-Pilot7IconDashSolo@O-PilotIcon]
+Graphic = G-Pilot7
+LifeTime = fx
+FXList = FX-FadeOut
+
+[O-Pilot8IconDashSolo@O-PilotIcon]
+Graphic = G-Pilot8
+LifeTime = fx
+FXList = FX-FadeOut
+
 															;SHIP ICON
 
 [O-ShipIcon]
@@ -132,6 +220,38 @@ Graphic = G-Ship7
 
 [O-Ship8IconP1@O-ShipIcon]
 Graphic = G-Ship8
+
+[O-Ship1IconDashP1@O-ShipIcon]
+Graphic = G-Ship1
+FXList = FX-FadeOut
+
+[O-Ship2IconDashP1@O-ShipIcon]
+Graphic = G-Ship2
+FXList = FX-FadeOut
+
+[O-Ship3IconDashP1@O-ShipIcon]
+Graphic = G-Ship3
+FXList = FX-FadeOut
+
+[O-Ship4IconDashP1@O-ShipIcon]
+Graphic = G-Ship4
+FXList = FX-FadeOut
+
+[O-Ship5IconDashP1@O-ShipIcon]
+Graphic = G-Ship5
+FXList = FX-FadeOut
+
+[O-Ship6IconDashP1@O-ShipIcon]
+Graphic = G-Ship6
+FXList = FX-FadeOut
+
+[O-Ship7IconDashP1@O-ShipIcon]
+Graphic = G-Ship7
+FXList = FX-FadeOut
+
+[O-Ship8IconDashP1@O-ShipIcon]
+Graphic = G-Ship8
+FXList = FX-FadeOut
 
 															;ELECTRICITY ICON
 
