--- a/data/config/Pilot.ini
+++ b/data/config/Pilot.ini
@@ -18,6 +18,7 @@ DashInput = @Commands.CalculateDashInput
 ParryInput = @Commands.CalculateParryInput
 MaxIFrames = 1.0 ; Ensure that this value is equal to @TT-IFramesFlash duration / 60.
 IFrameFlashInterval = 0.1
+DashIconInterval = 0.00000001
 
 [G-Pilot]
 Pivot = center
@@ -81,10 +82,10 @@ CheckMask = geometry # space # projectileP1
 [O-Pilot1@O-Pilot]
 Graphic = G-Pilot1
 ;User-Defined
-WalkingSpeed = 20000.0
-FlyingSpeed = 30000.0
-JumpingSpeed = 65000.0
-DashSpeed = 200000.0
+WalkingSpeed = 350.0
+FlyingSpeed = 525.0
+JumpingSpeed = 1500.0
+DashSpeed = 3500.0
 JumpDuration = 0.45
 DashDuration = 0.1
 ParryDuration = 0.8
@@ -167,10 +168,10 @@ CheckMask = pilotP1
 [O-Pilot2@O-Pilot]
 Graphic = G-Pilot2
 ;User-Defined
-WalkingSpeed = 20000.0
-FlyingSpeed = 30000.0
-JumpingSpeed = 65000.0
-DashSpeed = 200000.0
+WalkingSpeed = 350.0
+FlyingSpeed = 525.0
+JumpingSpeed = 1500.0
+DashSpeed = 3500.0
 JumpDuration = 0.45
 DashDuration = 0.1
 ParryDuration = 0.8
@@ -253,10 +254,10 @@ CheckMask = pilotP1
 [O-Pilot3@O-Pilot]
 Graphic = G-Pilot3
 ;User-Defined
-WalkingSpeed = 20000.0
-FlyingSpeed = 30000.0
-JumpingSpeed = 65000.0
-DashSpeed = 200000.0
+WalkingSpeed = 350.0
+FlyingSpeed = 525.0
+JumpingSpeed = 1500.0
+DashSpeed = 3500.0
 JumpDuration = 0.45
 DashDuration = 0.1
 ParryDuration = 0.8
@@ -339,10 +340,10 @@ CheckMask = pilotP1
 [O-Pilot4@O-Pilot]
 Graphic = G-Pilot4
 ;User-Defined
-WalkingSpeed = 20000.0
-FlyingSpeed = 30000.0
-JumpingSpeed = 65000.0
-DashSpeed = 200000.0
+WalkingSpeed = 350.0
+FlyingSpeed = 525.0
+JumpingSpeed = 1500.0
+DashSpeed = 3500.0
 JumpDuration = 0.45
 DashDuration = 0.1
 ParryDuration = 0.8
@@ -425,10 +426,10 @@ CheckMask = pilotP1
 [O-Pilot5@O-Pilot]
 Graphic = G-Pilot5
 ;User-Defined
-WalkingSpeed = 20000.0
-FlyingSpeed = 30000.0
-JumpingSpeed = 65000.0
-DashSpeed = 200000.0
+WalkingSpeed = 350.0
+FlyingSpeed = 525.0
+JumpingSpeed = 1500.0
+DashSpeed = 3500.0
 JumpDuration = 0.45
 DashDuration = 0.1
 ParryDuration = 0.8
@@ -512,10 +513,10 @@ CheckMask = pilotP1
 [O-Pilot6@O-Pilot]
 Graphic = G-Pilot6
 ;User-Defined
-WalkingSpeed = 20000.0
-FlyingSpeed = 30000.0
-JumpingSpeed = 65000.0
-DashSpeed = 200000.0
+WalkingSpeed = 350.0
+FlyingSpeed = 525.0
+JumpingSpeed = 1500.0
+DashSpeed = 3500.0
 JumpDuration = 0.45
 DashDuration = 0.1
 ParryDuration = 0.8
@@ -599,10 +600,10 @@ CheckMask = pilotP1
 [O-Pilot7@O-Pilot]
 Graphic = G-Pilot7
 ;User-Defined
-WalkingSpeed = 20000.0
-FlyingSpeed = 30000.0
-JumpingSpeed = 65000.0
-DashSpeed = 200000.0
+WalkingSpeed = 350.0
+FlyingSpeed = 525.0
+JumpingSpeed = 1500.0
+DashSpeed = 3500.0
 JumpDuration = 0.45
 DashDuration = 0.1
 ParryDuration = 0.8
@@ -685,10 +686,10 @@ CheckMask = pilotP1
 [O-Pilot8@O-Pilot]
 Graphic = G-Pilot8
 ;User-Defined
-WalkingSpeed = 20000.0
-FlyingSpeed = 30000.0
-JumpingSpeed = 65000.0
-DashSpeed = 200000.0
+WalkingSpeed = 350.0
+FlyingSpeed = 525.0
+JumpingSpeed = 1500.0
+DashSpeed = 3500.0
 JumpDuration = 0.45
 DashDuration = 0.1
 ParryDuration = 0.8
