--- a/data/config/Scene.ini
+++ b/data/config/Scene.ini
@@ -182,6 +182,8 @@ ChildList = O-Walls # O-Partition # O-DashMeterP1 # O-ParryMeterP1 # O-LivesMete
 ;Data
 PilotP1 = O-Pilot1P1
 PilotP2 = O-Pilot1P2
+MatchTime = 120
+ContractionSpeed = 0.1
 
 															;METER
 
@@ -429,18 +431,20 @@ Pivot = right
 
 															;TIMER TEXT
 
-[O-TimerText@O-Text]
+[O-TimerText@O-UI]
+UseParentSpace = both
 Graphic = G-TimerText
-Scale = (0.08, 0.08, 0.08)
+Scale = (0.08, 0.08, 1)
 ;User-Defined
 Pos = (0, -0.4375)
+Depth = O-TextUI
 
 [G-TimerText]
 Text = T-TimerText
 Pivot = center
 
 [T-TimerText]
-String = 90
+String = 120
 
 															;TO SCENE
 
@@ -500,7 +504,7 @@ Texture = pixel
 Color = (0, 0, 0)
 Alpha = 0
 FXList = @
-SlotList = FXS-FadeIn # FXS-FadeOut
+SlotList = FXS-FadeInScene # FXS-FadeOutScene
 ;User-Defined
 Pos = (0, 0)
 Depth = O-Fade
